<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/taskNameDataText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/task_name_placeholder"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/taskDescriptionDataText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:editable="false"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/task_description_placeholder"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/taskDeadlineDataText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/task_deadline_placeholder"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/taskCompletionStatusDataText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/task_completion_status_incomplete"
        android:textSize="24sp" />

    <Button
        android:id="@+id/taskCompletionButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/task_view_data_button_incomplete"
        android:textSize="16sp" />
</LinearLayout>